# elna-vector-db

./: .gitignore  Cargo.toml  README.md  canister_ids.json  dfx.json  did.sh  elna_vector_db.did
.github/workflows/: rust.yml
scripts/: build_script.sh
src/: collection.rs  config.rs  db.rs  embedding.rs  ic_vector_db.did  lib.rs  main.rs  main_test.rs  similarity.rs  test.rs
src/database/: collection.rs  db.rs  embedding.rs  index.rs  mod.rs  similarity.rs
src/elna_auth_macros/: Cargo.toml
src/elna_auth_macros/src/: lib.rs
src/elna_db_backend/: Cargo.toml  elna_db_backend.did
src/elna_db_backend/src/: lib.rs
src/elna_db_backend/src/database/: collection.rs  db.rs  error.rs  index.rs  memory.rs  mod.rs  users.rs
src/hnsw/: collection.rs  database.rs  index.rs  mod.rs
