[package]
name = "elna_vector_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]


[dependencies]
candid = "0.8"
ic-cdk = "0.7"
ic-cdk-macros = "0.8.4"
serde = "1.0.196"
schemars = "0.8.12"
thiserror = "1.0.40"
rayon = "1.7.0"
